padding for levels,no padding for long read pages on mobile,view lesson planner fix for Lesson Topics page,tags spacing,difficulty-tag roundness,description-text 66%,byline tweaks

--- a/app/assets/stylesheets/application/base/base.scss
+++ b/app/assets/stylesheets/application/base/base.scss
@@ -165,3 +165,13 @@ ul, ol {
     line-height: 2.7rem;
   }
 }
+
+.levels {
+  margin: 1rem 0 0;
+}
+
+@include breakpoint(small only) {
+  .large-8.large-centered.columns {
+    padding: 0;
+  }
+}
