--- a/app/assets/stylesheets/application/components/footer.scss
+++ b/app/assets/stylesheets/application/components/footer.scss
@@ -41,6 +41,9 @@ footer {
 
   .logos {
     text-align: center;
+    a:nth-child(2) {
+      width: 210px;
+    }
   }
 
   .footer-links {
