--- a/app/assets/stylesheets/application/lessons.scss
+++ b/app/assets/stylesheets/application/lessons.scss
@@ -9,7 +9,7 @@
 .difficulty-tag {
   color: #fefefe;
   display: inline-block;
-  border-radius: 0.6rem;
+  border-radius: 10px;
   font-size: 1rem;
   line-height: 1.5rem;
   margin: 0 0.25rem 0 0;
@@ -108,9 +108,6 @@
     .description {
       font-size: 1.3rem;
       line-height: 1.7rem;
-      margin-bottom: 2rem;
-    }
-    .levels {
       margin-bottom: 2rem;
     }
   }
